[project]
name = "smarthelpernodes"
description = "NODES: Smart Prompt (with syntax highlight and comment stripping), Smart HunyuanVideo Lora Select, Smart HunyuanVideo Lora StackSmart Format String, Smart Format String (10 params)"
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/slvslvslv/ComfyUI-SmartHelperNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-SmartHelperNodes"
Icon = ""
